// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineRecoveryKeySetupCreate renders as expected 1`] = `
<button
  class="cta-primary cta-xl flex justify-center items-center"
  data-glean-id="inline_recovery_key_cta_submit"
  type="submit"
>
  <span
    data-testid="ftlmsg-mock"
    id="inline-recovery-key-setup-start-button"
  >
    Create account recovery key
  </span>
</button>
`;

exports[`InlineRecoveryKeySetupCreate renders button with CMS passthrough 1`] = `
<button
  class="cta-primary-cms cta-xl flex justify-center items-center"
  data-glean-id="inline_recovery_key_cta_submit"
  style="--cta-bg: #000000; --cta-border: #000000; --cta-active: #000000; --cta-disabled: #00000060;"
  type="submit"
>
  <span
    data-testid="ftlmsg-mock"
    id="inline-recovery-key-setup-start-button"
  >
    Create account recovery key
  </span>
</button>
`;
